when i looked at the blog archive, i noticed a glaring issue. whenever you are on a mobile device, the sidebar is still persistent, which leaves a negative user experience, as there isn't much room for the page content. in order to negate this, i have implemented a solution. my solution is that i am shifting the order of the items around when you are detected to be on a mobile device using css. although this isn't faitful and too well thought out, i believe that this small improvemenet will have a large benefit on the overall user experience

--- a/pages/css/archive/blog.css
+++ b/pages/css/archive/blog.css
@@ -100,3 +100,6 @@ footer a {
 	padding: 0 3px 0 3px;
 }
 footer a:hover {color: white;}
+@media only screen and (max-width: 700px) {
+	#central {flex-direction: column-reverse;}
+}
